--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -6,4 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".InfoActivity">
 
+    <include
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            layout="@layout/header_layout"
+            android:id="@+id/include" />
+
+    <Button
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/button_student1"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="100dp"
+            app:layout_constraintTop_toBottomOf="@+id/include"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="158dp"
+            android:layout_marginEnd="159dp"
+            style="@style/HomeButton"
+            android:text="@string/student1" />
+
+    <Button
+            android:text="@string/student2"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/button_student2"
+            android:layout_marginTop="63dp"
+            app:layout_constraintTop_toBottomOf="@+id/button_student1"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="158dp"
+            android:layout_marginEnd="159dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/HomeButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
