--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,8 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginTop">50dp</item>
     </style>
+    <style name="InfoStudent" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
