--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -26,7 +26,7 @@
             android:layout_width="200dp"
             android:layout_height="25dp"
             android:id="@+id/InfoStudent1"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="50dp"
             android:layout_marginStart="105dp"
             android:layout_marginEnd="106dp"
             android:textAppearance="@style/InfoStudent"
@@ -41,7 +41,7 @@
             android:textAppearance="@style/InfoStudent"
             android:layout_marginStart="105dp"
             android:layout_marginEnd="106dp"
-            android:layout_marginTop="2dp" />
+            android:layout_marginTop="10dp" />
 
     <TextView
             android:text="@string/MailStudent1"
@@ -50,18 +50,28 @@
             android:id="@+id/MailStudent1"
             android:textAppearance="@style/InfoStudent"
             android:textAlignment="center"
-            android:layout_marginStart="105dp"
-            android:layout_marginEnd="106dp"
-            android:layout_marginTop="2dp" />
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="116dp"
+            android:layout_marginTop="10dp" />
 
     <TextView
             android:text="@string/GroupStudent1"
             android:layout_width="220dp"
             android:layout_height="25dp"
             android:id="@+id/GroupStudent1"
-            android:layout_marginStart="105dp"
+            android:layout_marginStart="95dp"
             android:layout_marginEnd="106dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="10dp"
             android:textAppearance="@style/InfoStudent"
             android:textAlignment="center" />
+
+    <TextView
+            android:text="@string/https_www_epsi_fr"
+            android:layout_width="130dp"
+            android:id="@+id/lien"
+            android:layout_height="25dp"
+            android:layout_marginStart="145dp"
+            android:layout_marginEnd="106dp"
+            android:layout_marginTop="250dp" />
+
 </LinearLayout>
