--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="50dp">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerviewCategorie"
+                android:id="@+id/recyclerviewProduit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
