--- a/app/src/main/res/layout/cell_categories.xml
+++ b/app/src/main/res/layout/cell_categories.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/ButtonCategorieTitle"
+        android:id="@+id/produitName"
         style="@style/CategorieButton"
         android:text="@string/title" />
 </LinearLayout>
